test/corpus/values.txt
================================================================================
comments
================================================================================

// leading line comment
patch {
    /* block
       comment */
    Constant constant1 { x = 0; y = 0; } // trailing
}

--------------------------------------------------------------------------------

(source_file
  (comment)
  (patch
    body: (patch_body
      (comment)
      (node
        type: (identifier)
        name: (identifier)
        body: (node_body
          (field
            key: (identifier)
            value: (number))
          (field
            key: (identifier)
            value: (number))))
      (comment))))

================================================================================
nested patch node
================================================================================

patch "Outer" {
    Patch patch1 {
        x = 0; y = 0;
        name = "Inner";
        patch = patch "Inner" {
            Constant constant1 { x = 0; y = 0; }
            macro "pitch" -> constant1(20, 20000);
        };
    }
}

--------------------------------------------------------------------------------

(source_file
  (patch
    name: (string)
    body: (patch_body
      (node
        type: (identifier)
        name: (identifier)
        body: (node_body
          (field
            key: (identifier)
            value: (number))
          (field
            key: (identifier)
            value: (number))
          (field
            key: (identifier)
            value: (string))
          (field
            key: (identifier)
            value: (patch
              name: (string)
              body: (patch_body
                (node
                  type: (identifier)
                  name: (identifier)
                  body: (node_body
                    (field
                      key: (identifier)
                      value: (number))
                    (field
                      key: (identifier)
                      value: (number))))
                (macro
                  name: (string)
                  target: (identifier)
                  min: (number)
                  max: (number))))))))))

================================================================================
value kinds
================================================================================

patch {
    Oscillator oscillator1 {
        x = -12.5; y = 1e3;
        oscillator = { kind = "factory", name = "Sine" };
        weights = [1, 0.5, -0.25e-2];
        enabled = true;
        label = "quote \" and newline \n";
        mode = linear;
    }
}

--------------------------------------------------------------------------------

(source_file
  (patch
    body: (patch_body
      (node
        type: (identifier)
        name: (identifier)
        body: (node_body
          (field
            key: (identifier)
            value: (number))
          (field
            key: (identifier)
            value: (number))
          (field
            key: (identifier)
            value: (object
              (pair
                key: (identifier)
                value: (string))
              (pair
                key: (identifier)
                value: (string))))
          (field
            key: (identifier)
            value: (array
              (number)
              (number)
              (number)))
          (field
            key: (identifier)
            value: (boolean))
          (field
            key: (identifier)
            value: (string))
          (field
            key: (identifier)
            value: (identifier)))))))

